References from word version added to bib file and changed in text to \citep{}.

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -33,3 +33,90 @@ url = {http://www.sympy.org},
     Url = {Http://Www.R-Project.Org},
   }
 
+@article{pollock2002large,
+  title={Large scale wildlife monitoring studies: statistical methods for design and analysis},
+  author={Pollock, Kenneth H and Nichols, James D and Simons, Theodore R and Farnsworth, George L and Bailey, Larissa L and Sauer, John R},
+  journal={Environmetrics},
+  volume={13},
+  number={2},
+  pages={105--119},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@article{gese2001monitoring,
+  title={Monitoring of terrestrial carnivore populations},
+  author={Gese, Eric M},
+  journal={USDA National Wildlife Research Center-Staff Publications},
+  pages={576},
+  year={2001}
+}
+
+@article{rogers2013density,
+  title={Density can be misleading for low-density species: benefits of passive acoustic monitoring},
+  author={Rogers, Tracey L and Ciaglia, Michaela B and Klinck, Holger and Southwell, Colin},
+  journal={PloS one},
+  volume={8},
+  number={1},
+  pages={e52542},
+  year={2013},
+  publisher={Public Library of Science}
+}
+
+@article{ofarrel1999comparison,
+  title={A comparison of acoustic versus capture techniques for the inventory of bats},
+  author={O'Farrell, Michael J and Gannon, William L},
+  journal={Journal of Mammalogy},
+  pages={24--30},
+  year={1999},
+  publisher={JSTOR}
+}
+
+@article{mcdonald1999passive,
+  title={Passive acoustic methods applied to fin whale population density estimation},
+  author={McDonald, Mark A and Fox, Christopher G},
+  journal={The Journal of the Acoustical Society of America},
+  volume={105},
+  number={5},
+  pages={2643--2651},
+  year={1999},
+  publisher={Acoustical Society of America}
+}
+
+
+@article{damuth1981population,
+  title={Population density and body size in mammals},
+  author={Damuth, John},
+  journal={Nature},
+  volume={290},
+  number={5808},
+  pages={699--700},
+  year={1981},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{carbone2005far,
+  title={How far do animals go? Determinants of day range in mammals},
+  author={Carbone, Chris and Cowlishaw, Guy and Isaac, Nick JB and Rowcliffe, J Marcus},
+  journal={The American Naturalist},
+  volume={165},
+  number={2},
+  pages={290--297},
+  year={2005},
+  publisher={JSTOR}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
