--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -62,12 +62,12 @@ Point 4: These models provide an effective, and currently the only, method to es
 
 \begin{itemize}
 \item Monitoring the size of populations is necessary for maintaining biodiversity.
-\item Monitoring can be done in different ways, by a direct count or through taking samples. (Pollock 2002)
+\item Monitoring can be done in different ways, by a direct count or through taking samples. \citep{pollock2002large}
 \item Methods for collecting samples can vary from human surveys to sensor records, such as the results from cameras or sound recorders placed throughout an environment. 
-\item Sensors are growing in popularity, as they are efficient, relativity cheap and non-invasive. (Gese 2001)
+\item Sensors are growing in popularity, as they are efficient, relativity cheap and non-invasive. \citep{gese2001monitoring}
 \item Samples collected from sensors can then be used in methods like REM or Capture-Recapture in order to estimate density of the population.
 \item Current methods are not suitable for all species, so some species have no, or unreliable, population information. 
-\item These species are often difficult to capture on camera, but are easier to detect using an acoustic sensor (Rogers 2013), such as bats (O’Farrell 1999), whales (McDonald 1998), and potentially for species such as monkeys. 
+\item These species are often difficult to capture on camera, but are easier to detect using an acoustic sensor \citep{rogers2013density}, such as bats \citep{ofarrel1999comparison}, whales \citep{mcdonald1999passive}, and potentially for species such as monkeys. 
 \item But these data collection methods are incompatible with REM, because the width of the sensor can be greater than 90, and because the animal may give off a directional signal 
 \item We are going to extend REM methods so that it can be used with acoustic data as well as data collected via camera traps
 \end{itemize}
@@ -121,9 +121,9 @@ Figure \ref{f:regions} shows the different regions with the upper right being th
 
 For regions with profiles that are more complex than a circle we need to explicitly write functions for the width of the profile for every approach angle. We then use these functions to find the average profile for all approach angles by integrating across all $2\pi$ angles of approach and dividing by $2\pi$. In practice, as the models are all left/right symmetrical we can integrate across $\pi$ angles of approach and divide by $\pi$.
 
-To work through one example that contains both a and s we will examine p321. Following \citep{Rowcliffe2008estimating} we use $gamma_i$ to denote the focal angle which is the angle we integrate over. The subscript $i$ distinguishes different angles. For model p321 we examine $ gamma_4$ with  $ gamma_4 = \pi/2$ being an approach angle directly towards the sensor (see Figure \ref{f:p231schem}).
+To work through one example that contains both a and s we will examine p321. Following \citep{rowcliffe2008estimating} we use $\gamma_i$ to denote the focal angle which is the angle we integrate over. The subscript $i$ distinguishes different angles. For model p321 we examine $\gamma_4$ with  $\gamma_4 = \pi/2$ being an approach angle directly towards the sensor (see Figure \ref{f:p231schem}).
 
-We can see that, rotating anticlockwise, from $ gamma_4  = \pi/2$ the detection region is $2r$ wide. However, an animal will only be detected if it approaches the detector so that as it enters the detection region the angle between the direction of approach and the direction towards the sensor is less than $\theta_a/2$. The width of the profile within which the animal will be detected is therefore $2r\sin(θa/2)$. At $ gamma_4  = \theta_s/2 + \pi/2 – \theta_a/2$ we reach a point where the right hand side of the profile (relative to the approach direction) isn't limited by the call angle but is limited by the detection angle instead. From here the profile width is therefore $r\sin( \theta_a/2) + r\cos(  gamma_4  – \theta_s/2)$. Finally, at $ gamma_4  = 5\pi/2 - \theta_s/2  - \theta_a/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $ gamma_4  = 3\pi/2$, the width of the profile is again $2r\sin( \theta_a/2)$. We have therefore characterised the profile width for $\pi$ radians of rotation (from directly towards the sensor to directly behind the sensor.) To find the average profile width for any angle of approach, we integrate these functions over their appropriate intervals of $ gamma_4 $ and divide by $\pi$.
+We can see that, rotating anticlockwise, from $\gamma_4  = \pi/2$ the detection region is $2r$ wide. However, an animal will only be detected if it approaches the detector so that as it enters the detection region the angle between the direction of approach and the direction towards the sensor is less than $\theta_a/2$. The width of the profile within which the animal will be detected is therefore $2r\sin(θa/2)$. At $\gamma_4  = \theta_s/2 + \pi/2 – \theta_a/2$ we reach a point where the right hand side of the profile (relative to the approach direction) isn't limited by the call angle but is limited by the detection angle instead. From here the profile width is therefore $r\sin( \theta_a/2) + r\cos( \gamma_4  – \theta_s/2)$. Finally, at $\gamma_4  = 5\pi/2 - \theta_s/2  - \theta_a/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $\gamma_4  = 3\pi/2$, the width of the profile is again $2r\sin( \theta_a/2)$. We have therefore characterised the profile width for $\pi$ radians of rotation (from directly towards the sensor to directly behind the sensor.) To find the average profile width for any angle of approach, we integrate these functions over their appropriate intervals of $\gamma_4 $ and divide by $\pi$.
 \begin{align}
     p321 =&\frac{1}{\pi} \left(\int\limits_{\frac{\pi}{2}}^{\frac{\pi}{2} + \frac{\theta_{s}}{2} - \frac{\theta_{a}}{2}}2 r \sin{\left (\frac{\theta_{a}}{2} \right )}\;\mathrm{d}\gamma_{4}+\int\limits_{\frac{\pi}{2} + \frac{\theta_{s}}{2} - \frac{\theta_{a}}{2}}^{\frac{5 \pi}{2} - \frac{\theta_{s}}{2} - \frac{\theta_{a}}{2}}r \sin{\left (\frac{\theta_{a}}{2} \right )} + r \cos{\left (\gamma_{4} - \frac{\theta_{s}}{2} \right )}\;\mathrm{d}\gamma_{4}+\int\limits_{\frac{5 \pi}{2} - \frac{\theta_{s}}{2} - \frac{\theta_{a}}{2}}^{\frac{3 \pi}{2}}2 r \sin{\left (\frac{\theta_{a}}{2} \right )}\;\mathrm{d}\gamma_{4}\right)\\
     p321 =& \frac{r}{\pi} \left(\theta_{s} \sin{\left (\frac{\theta_{a}}{2} \right )} - \cos{\left (\frac{\theta_{a}}{2} \right )} + \cos{\left (\frac{\theta_{a}}{2} + \theta_{s} \right )}\right)
@@ -132,7 +132,7 @@ Then, as with the gas model, this term is used to calculate density
 \begin{equation}
 D = z/vtp321. 
 \end{equation}
-We can also see what causes this model to be discontinuously different to p322. Examine the profile at $ gamma_4 = \theta_s/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin( \theta_a/2)$ while the right side is zero. This profile doesn't exist if we return to the full $2r\sin( \theta_a/2)$ profile before $ gamma_4  = \theta_s/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta_s/2 - \theta_a/2 <  \theta_s/2 + \pi/2$. We find that this new profile only exists if $ \theta_a < 4\pi – 2 \theta_s$. This inequality defines the line separating p321 and p322.
+We can also see what causes this model to be discontinuously different to p322. Examine the profile at $\gamma_4 = \theta_s/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin( \theta_a/2)$ while the right side is zero. This profile doesn't exist if we return to the full $2r\sin( \theta_a/2)$ profile before $\gamma_4  = \theta_s/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta_s/2 - \theta_a/2 <  \theta_s/2 + \pi/2$. We find that this new profile only exists if $ \theta_a < 4\pi - 2 \theta_s$. This inequality defines the line separating p321 and p322.
 
 While specifying the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. 
 
@@ -148,7 +148,7 @@ To make the application of these models simple, we have included an R script in 
 	\item Simulation created in C++
 	\item A homogeneous world with periodic boundaries is created, 
 	\item A single sensor placed in the middle if the world, with a given width and radius
-	\item The world is populated with a known density of animals of up to 70animals per km2 (Demuth 1981), which are placed randomly at the beginning of each simulation.
+	\item The world is populated with a known density of animals of up to 70animals per km2 \citep{damuth1981population}, which are placed randomly at the beginning of each simulation.
 	\item The animals move through the world with a set average speed, and movement strategy
 	\item When an animal moves through the edge of the detector range it is captured
 	\item The total number of capture event is summed for each simulation and the relevant model applied and the density estimated
@@ -160,7 +160,7 @@ To make the application of these models simple, we have included an R script in 
 	\item In order to calculated the effect that variables have precision of the results
 		\begin{itemize}
 		\item Values are subsamples with respect to time, density and call width.
-		\item A range of speeds between 0.00012m/s and 0.46m/s (Carbone 2005) were simulationed
+		\item A range of speeds between 0.00012m/s and 0.46m/s \citep{carbone2005far} were simulationed
 		\item Along with a range of correlated walks with set maximum turn angle, (straight-line movement and random walks are special cases)
 		\end{itemize}
 	\end{itemize}
